--- a/PlanerSimulation_ProcessInteraction/Views/LSearchView.xaml
+++ b/PlanerSimulation_ProcessInteraction/Views/LSearchView.xaml
@@ -4,9 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PlanerSimulation_ProcessInteraction.Views"
+             xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <Label>L</Label>
-    </Grid>
+             d:DesignHeight="600" d:DesignWidth="1000">
+    <StackPanel>
+        
+    </StackPanel>
 </UserControl>
