--- a/PlanerSimulation_ProcessInteraction/Views/NormalView.xaml
+++ b/PlanerSimulation_ProcessInteraction/Views/NormalView.xaml
@@ -29,7 +29,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition Width="200" />
-                    <ColumnDefinition Width="40" />
+                    <ColumnDefinition Width="50" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition />
@@ -42,7 +42,7 @@
                 <Label Grid.Column="2" Content="{Binding StabilityPoint}" />
 
                 <Label Grid.Column="0" Grid.Row="1" Content="Ending Point: " />
-                <Slider Grid.Column="1" Grid.Row="1" Value="{Binding EndingPoint}" Minimum="1" Maximum="2000" />
+                <Slider Grid.Column="1" Grid.Row="1" Value="{Binding EndingPoint}" Minimum="1" Maximum="10000" />
                 <Label Grid.Column="2" Grid.Row="1" Content="{Binding EndingPoint}" />
 
                 <Label Grid.Column="0" Grid.Row="2" Content="Number of Trials: " />
@@ -53,7 +53,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition Width="200" />
-                    <ColumnDefinition Width="60" />
+                    <ColumnDefinition Width="80" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition />
@@ -61,11 +61,11 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Column="0" Content="Lambda: " />
-                <Slider Grid.Column="1" Value="{Binding Lambda}" Minimum="0.001" Maximum="0.05" TickFrequency="0.0001" IsSnapToTickEnabled="True" LargeChange="0.0001" />
+                <Slider Grid.Column="1" Value="{Binding Lambda}" Minimum="0.001" Maximum="0.05" TickFrequency="0.000001" IsSnapToTickEnabled="True" LargeChange="0.000001" />
                 <Label Grid.Column="2" Content="{Binding Lambda}" />
 
                 <Label Grid.Column="0" Grid.Row="1" Content="Lambda Span: " />
-                <Slider Grid.Column="1" Grid.Row="1" Value="{Binding LambdaSpan}" Minimum="0.0001" Maximum="0.0005" TickFrequency="0.00001" LargeChange="0.00001" />
+                <Slider Grid.Column="1" Grid.Row="1" Value="{Binding LambdaSpan}" Minimum="0.000000001" Maximum="0.0005" TickFrequency="0.000000001" LargeChange="0.000000001" />
                 <Label Grid.Column="2" Grid.Row="1" Content="{Binding LambdaSpan}" />
             </Grid>
 
